# -*- python -*-

module(name = "drake_iiwa_driver")

bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "kuka_fri",
    build_file = "//tools:kuka-fri.BUILD.bazel",
    path = "kuka-fri",
)

DRAKE_VERSION = "1.45.0"

bazel_dep(name = "drake")
archive_override(
    module_name = "drake",
    canonical_id = DRAKE_VERSION,
    sha256 = "fd70210cbbe233b78bb6df2d8f42c7334ea15fca8833865322d788ab4eaf0c16",
    strip_prefix = "drake-{}".format(DRAKE_VERSION),
    url = "https://github.com/RobotLocomotion/drake/releases/download/v{}/drake-{}-src.tar.gz".format(
        DRAKE_VERSION,
        DRAKE_VERSION,
    ),
)

# TODO(jwnimmer-tri) Pin to >1.5.1 once there is a newer release tag.
LCM_VERSION = "e4bed2c86fbd6dd2280326801acf71cbd05074be"

bazel_dep(name = "lcm")
archive_override(
    module_name = "lcm",
    sha256 = "b2bf5bf7fed61805d72855c8ea9d247de95e5ca885ee6c5c8c9185aa87dda74c",  # noqa
    strip_prefix = "lcm-{}".format(LCM_VERSION),
    url = "https://github.com/lcm-proj/lcm/archive/{}.tar.gz".format(LCM_VERSION),
)
