# -*- python -*-

load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "kuka_driver",
    srcs = [
        "kuka_driver.cc",
        "low_pass_filter.h",
    ],
    # TODO(eric.cousineau): Figure out why clang-format-includes via Drake's
    # linting is unable to fix the errors it finds.
    tags = ["nolint"],
    deps = [
        "@drake//common:essential",
        "@drake//lcmtypes:iiwa",
        "@gflags",
        "@kuka_fri//:kuka-fri-lib",
        "@lcm",
    ],
)

add_lint_tests()
