# -*- python -*-

load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "kuka_driver",
    srcs = [
        "kuka_driver.cc",
        "low_pass_filter.h",
    ],
    deps = [
        "@drake//common:essential",
        "@drake//lcmtypes:iiwa",
        "@gflags",
        "@kuka_fri//:kuka-fri-lib",
        "@lcm",
    ],
)

add_lint_tests()
