load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "kuka_driver",
    srcs = [
        "kuka_driver.cc",
        "low_pass_filter.h",
    ],
    deps = [
        "@drake//common:essential",
        "@drake//lcmtypes:lcmtypes_drake_cc",
        "@gflags",
        "@kuka_fri//:kuka-fri-lib",
        "@lcm//lcm:lcm-static",
    ],
)

add_lint_tests()
