# -*- python -*

load("//tools/lint:lint.bzl", "add_lint_tests")

py_binary(
    name = "buildifier",
    srcs = ["buildifier.py"],
    data = ["//:.bazelproject"],
    deps = ["@drake//tools/lint:buildifier"],
)

py_binary(
    name = "clang-format-includes",
    srcs = ["clang_format_includes.py"],
    data = [
        "//:.bazelproject",
        "//:.clang-format",
    ],
    main = "clang_format_includes.py",
    deps = ["@drake//tools/lint:clang-format-includes"],
)

add_lint_tests()
